<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Rebecca\'s Tweets</string>
    <string name="foo_label">\@foo</string>
    <string name="body_label">Body Text</string>
    <string name="relativedate_label">Date</string>
    <string name="title_activity_new_tweet">Tweet</string>
    <string name="name_label">name</string>
    <string name="tweet_button">Tweet</string>
    <string name="cancel_button">Cancel</string>
    <string name="count_label">140</string>
    <string name="shortname_label">bar</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>