<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom= "5dp" 
    android:paddingLeft= "5dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/foo_label"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUsername"
        android:layout_below="@+id/tvUsername"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/body_label"
        android:textColorHighlight="#7C82D2"
        android:textColorHint="#2DC942"
        android:textColorLink="#483D8B"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvRelativeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/relativedate_label"
        android:textColor="#A9A9A9"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/tvname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/tvUsername"
        android:layout_marginLeft="3dp"
        android:text="@string/shortname_label" 
        android:textColor="#A9A9A9"
        android:textSize="8sp" />

</RelativeLayout>